fixed footer links padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1244,6 +1244,7 @@ form textarea {
     display: flex;
     justify-content: center;
     margin-bottom: 32px;
+    padding-top: 120px;
   }
 
   #mission-header {
